Finished timeline and fixed some layout issues

--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -46,7 +46,9 @@
 
 .timeline-line-parent {
     position: absolute;
+    height: 100%;
     width: 30%;
+    max-width: 150px;
     display: flex;
     justify-content: center;
 }
@@ -63,12 +65,12 @@
     height: fit-content;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     gap: 1rem;
 }
 
 .segment-left {
     width: 30%;
+    max-width: 150px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -99,6 +101,7 @@
     align-items: center;
     font-weight: 500;
     font-size: 1.2rem;
+    cursor: pointer;
 
 }
 
@@ -111,5 +114,7 @@
 
 /* Larger Devices */
 @media (min-width: 900px) {
-
+    .timeline-graph-parent {
+        width: 60%;
+    }
 }
